Fix header alignment

--- a/ArticleTemplates/css/scss/templates/_football.scss
+++ b/ArticleTemplates/css/scss/templates/_football.scss
@@ -9,7 +9,11 @@
 		@include margin(0,0,1,0);
 		.inner-header {
 			padding-top: 0;
+			@include padding(0,1,0,1);
 			overflow: auto;
+			.article__headline {
+				padding: 0;
+			}
 		}
 		p {
 			font-family: $agate-sans;
